# libPyCelNN

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: celnn.md  examples.md  libcelnn.md  mathematical-model.md  migration-from-pycnn.md  template-creation-guide.md  template-design.md
examples/: custom_activation.py  custom_template_simulation.py  image_edge_detection.py  one_dimensional_signal_filter.py  reaction_diffusion_like_pattern.py  template_registry_usage.py
src/celnn/: __init__.py  activations.py  exceptions.py
src/celnn/backends/: __init__.py  numpy_backend.py  protocol.py
src/celnn/core/: __init__.py  activations.py  boundary.py  dynamics.py  exceptions.py  network.py  result.py  simulation.py  solvers.py  templates.py  topology.py  typing.py  validation.py
src/celnn/domains/: __init__.py  grid.py  image.py  signal.py
src/celnn/io/: __init__.py  serialization.py
src/celnn/templates/: __init__.py  diffusion.py  image_processing.py  logic.py  pattern.py  registry.py
src/celnn/utils/: __init__.py  array.py  doc.py
src/celnn/visualization/: __init__.py  plots.py
tests/: test_activations.py  test_boundary.py  test_image_domain.py  test_network.py  test_registry.py  test_serialization.py  test_signal_domain.py  test_simulation.py  test_solvers.py  test_templates.py  test_topology.py
