[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "celnn"
version = "0.1.0"
description = "Generic Cellular Neural Networks for scientific computing and reusable local dynamical systems."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Tomieiro" }
]
keywords = [
  "cellular neural networks",
  "cnn",
  "dynamical systems",
  "scientific computing",
  "signal processing",
  "image processing",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "numpy>=1.24",
]

[project.optional-dependencies]
scipy = ["scipy>=1.10"]
image = ["pillow>=10.0"]
viz = ["matplotlib>=3.8"]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
  "mypy>=1.11",
]
all = [
  "scipy>=1.10",
  "pillow>=10.0",
  "matplotlib>=3.8",
]

[project.urls]
Homepage = "https://github.com/tomieiro/libPyCelNN"
Repository = "https://github.com/tomieiro/libPyCelNN"
Documentation = "https://github.com/tomieiro/libPyCelNN/tree/main/docs"
Issues = "https://github.com/tomieiro/libPyCelNN/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
